Bug 215180 - Undo in tile engine clears rects
Summary: Undo in tile engine clears rects
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-18 22:04 UTC by LukasT
Modified: 2009-11-28 17:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bug: Undo clears and does not undo (101.29 KB, image/jpeg)
2009-11-18 22:05 UTC, LukasT
Details

Note You need to log in before you can comment on or make changes to this bug.
Description LukasT 2009-11-18 22:04:24 UTC
Version:           2.2 Alpha 1 (using 4.3.3 (KDE 4.3.3), 4.3.3-2.fc11 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.30.9-96.fc11.i586

Steps to reproduce:
1. Paint with some paintop for some time on white background (1-2 minutes)
2. Undo
3. You will get corrupted image like is attached

Reproducible:
Randomly,sometimes it works, sometimes not.

Most probably tile engine bug. I will assign it to dimitry
Comment 1 LukasT 2009-11-18 22:05:19 UTC
Created attachment 38431 [details]
Bug: Undo clears and does not undo

This image shows the bug that appear randomly when painting.
Comment 2 LukasT 2009-11-18 22:07:18 UTC
I'm assigning this to dimitry. If not related to tile engine, feel free to re-assign to default.
Comment 3 LukasT 2009-11-18 22:21:19 UTC
I used custom image RGB8 - 1600x1200 to create the document.
I get rects filled with RGBA(0,0,0,0) compared to bug report at https://bugs.kde.org/213262. You can notice it in the attached image.
Comment 4 Dmitry Kazakov 2009-11-20 14:37:45 UTC
Hm.. Can't reproduce..

Do you mean painting 1-2 minutes without a break in a single "transaction"? I tried, but can't get it. But i have quite old r1045390 trunk. I shall try to update.
Comment 5 LukasT 2009-11-20 14:48:37 UTC
I mean painting with transactions. More strokes.
Comment 6 Dmitry Kazakov 2009-11-28 17:20:26 UTC
SVN commit 1055732 by dkazakov:

Wrong setDirty call. Extent has already changed.


BUG:215180


 M  +2 -1      kis_image_layer_remove_command.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1055732