Wrong setDirty call. Extent has already changed.

BUG:215180

svn path=/trunk/koffice/; revision=1055732